--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,100 @@ a {
   color: rgba(235, 213, 69, 0.989);
   transition: 1s ease;
 }
+#header .inner .btnCall {
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: none;
+  width: 20px;
+  height: 20px;
+}
+#header .inner .btnCall::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: top 0.5s 0s, transform 0.5s 0.5s;
+}
+#header .inner .btnCall::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #000;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: bottom 0.5s 0s, transform 0.5s 0.5s;
+}
+#header .inner .btnCall span {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -1px;
+  transition: 1s;
+  text-indent: -9999px;
+}
+#header .inner .btnCall.on::before {
+  top: 50%;
+  margin-top: -1px;
+  transform: rotate(45deg);
+}
+#header .inner .btnCall.on::after {
+  bottom: 50%;
+  margin-bottom: -1px;
+  transform: rotate(-45deg);
+}
+#header .inner .btnCall.on span {
+  transform: translateX(100%);
+  opacity: 0;
+}
+#header .inner .menuMo {
+  width: 270px;
+  height: 100vh;
+  background: #333;
+  position: fixed;
+  top: 0;
+  left: -270px;
+  padding: 35px 30px;
+  z-index: 10;
+  transition: 0.5s;
+}
+#header .inner .menuMo.on {
+  left: 0;
+}
+#header .inner .menuMo h1 {
+  padding-bottom: 30px;
+  border-bottom: 1px solid #666;
+}
+#header .inner .menuMo h1 a {
+  display: block;
+  font: bold 24px/1 "arial";
+  color: #fff;
+  text-align: center;
+}
+#header .inner .menuMo h1 span {
+  font-size: 12px;
+  color: #aaa;
+}
+#header .inner .menuMo #gnbMo li a {
+  display: block;
+  width: 100%;
+  padding: 20px 0;
+  border-bottom: 1px solid #444;
+  font: bold 14px/1 "arial";
+  color: #888;
+  text-align: center;
+}
 
 #visual {
   width: 100%;
@@ -75,9 +169,12 @@ a {
   overflow: hidden;
 }
 #visual .slider ul {
+  position: absolute;
   width: 300%;
   height: 100%;
   margin-left: 0;
+  top: 0;
+  left: 0;
 }
 #visual .slider ul li {
   width: 33.3333333333%;
@@ -261,7 +358,7 @@ a {
   position: relative;
 }
 #information .inner .wrap {
-  width: 750px;
+  width: 580px;
   float: left;
   height: 100%;
   margin-right: 20px;
@@ -277,15 +374,19 @@ a {
 }
 #information .inner .wrap a {
   display: block;
-  width: 400px;
-  height: 30px;
-  border: 1x solid #bbb;
-  font: bold 50px/30px "arial";
-  color: black;
+  width: 150px;
+  height: 40px;
+  border: 1px solid;
+  font: bold 15px/40px "arial";
+  color: #fff;
   text-align: center;
+  letter-spacing: 2px;
+  margin: 20px 0px 10px;
+  background-color: rgba(235, 213, 69, 0.989);
 }
 #information .inner .wrap a:hover {
-  color: #555;
+  background: #fff;
+  color: rgba(235, 213, 69, 0.989);
 }
 #information .QiuckJoin {
   position: relative;
@@ -581,6 +682,99 @@ a {
   width: 100%;
   font: 12px/1 "arial";
   color: rgba(235, 213, 69, 0.989);
+}
+
+@media screen and (max-width: 1179px) {
+  #header .inner {
+    width: 100%;
+    height: 100px;
+  }
+  #header .inner .menuWeb {
+    display: none;
+  }
+  #header .inner .btnCall {
+    display: block;
+  }
+  #visual {
+    width: 100%;
+    height: calc(100vh - 350px);
+  }
+  #visual .inner {
+    width: 100%;
+  }
+  #information {
+    padding: 50px 30px;
+  }
+  #information .inner {
+    width: 100%;
+  }
+  #information .inner ::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+  #information .inner .wrap {
+    width: 100%;
+    height: 100%;
+  }
+  #information .inner .wrap h1 {
+    text-align: left;
+  }
+  #information .inner .wrap p {
+    text-align: center;
+  }
+  #information .inner .wrap a {
+    margin: 0 auto;
+  }
+  #information .QiuckJoin form {
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  #information .QiuckJoin form h1 {
+    padding: 0px 0pax;
+    width: 100%;
+    height: 100%;
+  }
+  #brand {
+    padding: 100px 30px;
+  }
+  #brand .inner {
+    width: 100%;
+  }
+  #brand .inner .wrap article:nth-of-type(1) {
+    width: 49%;
+    margin-right: 2%;
+  }
+  #brand .inner .wrap article:nth-of-type(2) {
+    width: 49%;
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
+  #brand .inner .wrap article:nth-of-type(3) {
+    width: 49%;
+  }
+  #brand .inner .wrap article:nth-of-type(4) {
+    width: 100%;
+  }
+  #banner {
+    padding: 150px 30px;
+  }
+  #banner .inner {
+    width: 100%;
+  }
+  #comments {
+    padding: 100px 30px;
+  }
+  #comments .inner {
+    width: 100%;
+  }
+  #footer {
+    padding: 80px 30px;
+  }
+  #footer .inner {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
