--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
 @charset 'utf-8';
 
+$tablet: 1179px;
+$mobile: 539px;
+
 * {
 	margin: 0px;
 	padding: 0px;
@@ -21,6 +24,7 @@ a {
 	top: -99999999px;
 	opacity: 0;
 }
+
 // Header 영역
 #header {
 	z-index: 10;
@@ -78,6 +82,106 @@ a {
 				}
 			}
 		}
+		.btnCall {
+			position: absolute;
+			right: 30px;
+			top: 50%;
+			transform: translateY(-50%);
+			display: none;
+			width: 20px;
+			height: 20px;
+			&::before {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: #000;
+				position: absolute;
+				top: 0;
+				left: 0;
+				transition: top 0.5s 0s, transform 0.5s 0.5s;
+			}
+			&::after {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: #000;
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				transition: bottom 0.5s 0s, transform 0.5s 0.5s;
+			}
+			span {
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: #000;
+				position: absolute;
+				top: 50%;
+				left: 0;
+				margin-top: -1px;
+				transition: 1s;
+				text-indent: -9999px;
+			}
+			&.on {
+				&::before {
+					top: 50%;
+					margin-top: -1px;
+					transform: rotate(45deg);
+				}
+				&::after {
+					bottom: 50%;
+					margin-bottom: -1px;
+					transform: rotate(-45deg);
+				}
+				span {
+					transform: translateX(100%);
+					opacity: 0;
+				}
+			}
+		}
+		.menuMo {
+			width: 270px;
+			height: 100vh;
+			background: #333;
+			position: fixed;
+			top: 0;
+			left: -270px;
+			padding: 35px 30px;
+			z-index: 10;
+			transition: 0.5s;
+			&.on {
+				left: 0;
+			}
+			h1 {
+				padding-bottom: 30px;
+				border-bottom: 1px solid #666;
+				a {
+					display: block;
+					font: bold 24px/1 "arial";
+					color: #fff;
+					text-align: center;
+				}
+				span {
+					font-size: 12px;
+					color: #aaa;
+				}
+			}
+			#gnbMo {
+				li {
+					a {
+						display: block;
+						width: 100%;
+						padding: 20px 0;
+						border-bottom: 1px solid #444;
+						font: bold 14px/1 "arial";
+						color: #888;
+						text-align: center;
+					}
+				}
+			}
+		}
 	}
 }
 
@@ -94,9 +198,13 @@ a {
 		position: relative;
 		overflow: hidden;
 		ul {
+			position: absolute;
+
 			width: calc(100% * 3);
 			height: 100%;
 			margin-left: 0;
+			top: 0;
+			left: 0;
 			li {
 				width: calc(100% / 3);
 				height: 100%;
@@ -296,7 +404,7 @@ a {
 		margin: 0 auto;
 		position: relative;
 		.wrap {
-			width: 750px;
+			width: 580px;
 			float: left;
 			height: 100%;
 			margin-right: 20px;
@@ -312,19 +420,24 @@ a {
 			}
 			a {
 				display: block;
-				width: 400px;
-				height: 30px;
-				border: 1x solid #bbb;
-				font: bold 50px/30px "arial";
-				color: black;
+				width: 150px;
+				height: 40px;
+				border: 1px solid;
+				font: bold 15px/40px "arial";
+				color: #fff;
+
 				text-align: center;
+				letter-spacing: 2px;
+				margin: 20px 0px 10px;
+				background-color: rgba(235, 213, 69, 0.989);
 				&:hover {
-					// background: pink;
-					color: #555;
+					background: #fff;
+					color: rgba(235, 213, 69, 0.989);
 				}
 			}
 		}
 	}
+
 	.QiuckJoin {
 		position: relative;
 		//동의합니다가 위에있음.. 서브밋 왼쪽에 두고싶은데..
@@ -642,6 +755,117 @@ a {
 			width: 100%;
 			font: 12px/1 "arial";
 			color: rgba(235, 213, 69, 0.989);
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	//header
+	#header {
+		.inner {
+			width: 100%;
+			height: 100px;
+			.menuWeb {
+				display: none;
+			}
+			.btnCall {
+				display: block;
+			}
+		}
+	}
+	//visual
+	#visual {
+		width: 100%;
+		height: calc((100vh - 350px));
+		// height: calc(100vh);
+		.inner {
+			width: 100%;
+		}
+	}
+	//information
+	#information {
+		padding: 50px 30px;
+		.inner {
+			width: 100%;
+			::after {
+				content: "";
+				display: block;
+				clear: both;
+			}
+			.wrap {
+				width: 100%;
+				height: 100%;
+				h1 {
+					text-align: left;
+				}
+				p {
+					text-align: center;
+				}
+				a {
+					margin: 0 auto;
+				}
+			}
+		}
+		.QiuckJoin {
+			form {
+				top: 100%;
+				left: 50%;
+				transform: translateX(-50%);
+				// max-width: 50%;
+				h1 {
+					padding: 0px 0pax;
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
+	}
+	//brand
+
+	#brand {
+		padding: 100px 30px;
+		.inner {
+			width: 100%;
+			.wrap {
+				article {
+					&:nth-of-type(1) {
+						width: 49%;
+						margin-right: 2%;
+					}
+					&:nth-of-type(2) {
+						width: 49%;
+						margin-right: 0px;
+						margin-bottom: 20px;
+					}
+					&:nth-of-type(3) {
+						width: 49%;
+					}
+					&:nth-of-type(4) {
+						width: 100%;
+					}
+				}
+			}
+		}
+	}
+	//banner
+	#banner {
+		padding: 150px 30px;
+		.inner {
+			width: 100%;
+		}
+	}
+	//comments
+	#comments {
+		padding: 100px 30px;
+		.inner {
+			width: 100%;
+		}
+	}
+	//footer
+	#footer {
+		padding: 80px 30px;
+		.inner {
+			width: 100%;
 		}
 	}
 }
